# ftp-server-esp32

./: .env.template  .gitignore  CMakeLists.txt  README.md  extra.cmake  sdkconfig
data/: config.json
main/: CMakeLists.txt  Kconfig.projbuild  ftp-server-esp32.c  ftp_pasv_session.c  ftp_pasv_session.h  ftp_server.c  ftp_server.h  idf_component.yml  main.cpp  oss_config.template.h  transport.c  transport.h
main/http/: http_auth.c  http_auth.h  http_client.c  http_header.c  http_header.h  http_utils.c  http_utils.h  properties.c  properties.h
main/oss/: oss_auth.c  oss_auth.h  oss_client.c  oss_client.h  oss_utils.c  oss_utils.h  properties.c  properties.h
